[gd_scene load_steps=29 format=3 uid="uid://di7aukwd2npts"]

[ext_resource type="Script" path="res://scripts/autobattler/unit.gd" id="1_8dgt8"]
[ext_resource type="Texture2D" uid="uid://cbk2y267ceruo" path="res://assets/Tiny Swords/Factions/Knights/Troops/Warrior/Blue/Warrior_Blue.png" id="2_spa6o"]
[ext_resource type="Script" path="res://scripts/autobattler/health_bar.gd" id="3_o5exj"]
[ext_resource type="Script" path="res://scripts/components/health_component.gd" id="4_jk2d2"]
[ext_resource type="PackedScene" uid="uid://cqq4rinvc18ec" path="res://scenes/attack_component.tscn" id="5_pi0v5"]
[ext_resource type="Script" path="res://scripts/components/hitbox_component.gd" id="6_uy4kh"]
[ext_resource type="Script" path="res://scripts/components/pathfind_component.gd" id="7_q1lod"]
[ext_resource type="Script" path="res://scripts/components/team_component.gd" id="8_4t2y7"]
[ext_resource type="Script" path="res://scripts/components/velocity_component.gd" id="9_3pcpn"]
[ext_resource type="PackedScene" uid="uid://bp2u1u6n4td2u" path="res://scenes/vision_component.tscn" id="10_mlheh"]
[ext_resource type="Script" path="res://scripts/states/state_machine.gd" id="11_spwk3"]
[ext_resource type="Script" path="res://scripts/states/unit_attack_state.gd" id="12_8vpxg"]
[ext_resource type="Script" path="res://scripts/states/unit_death_state.gd" id="13_vwg8b"]
[ext_resource type="Script" path="res://scripts/states/unit_idle_state.gd" id="14_si0iq"]
[ext_resource type="Script" path="res://scripts/states/unit_march_state.gd" id="15_yhwyp"]
[ext_resource type="Script" path="res://scripts/states/unit_pursuit_state.gd" id="16_vaslo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mha4w"]

[sub_resource type="Animation" id="Animation_u2pj5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_dr8jx"]
resource_name = "attack1"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AttackComponent")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.733333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack"
}]
}

[sub_resource type="Animation" id="Animation_iehyh"]
resource_name = "attack2"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AttackComponent")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.933333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack"
}]
}

[sub_resource type="Animation" id="Animation_xhjgp"]
resource_name = "death"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0)]
}

[sub_resource type="Animation" id="Animation_obr80"]
resource_name = "free"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1)]
}

[sub_resource type="Animation" id="Animation_p7p3b"]
resource_name = "idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_j6qg6"]
resource_name = "walk"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dk8it"]
_data = {
"RESET": SubResource("Animation_u2pj5"),
"attack1": SubResource("Animation_dr8jx"),
"attack2": SubResource("Animation_iehyh"),
"death": SubResource("Animation_xhjgp"),
"free": SubResource("Animation_obr80"),
"idle": SubResource("Animation_p7p3b"),
"walk": SubResource("Animation_j6qg6")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bnc2x"]
bg_color = Color(0.277137, 0.204749, 0.172716, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oq04r"]
bg_color = Color(0.0157165, 0.710336, 0.47093, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.278431, 0.203922, 0.172549, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3wqly"]
radius = 17.0
height = 52.0

[node name="Warrior" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_8dgt8")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_spa6o")
offset = Vector2(0, -30)
hframes = 6
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_mha4w")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_dk8it")
}

[node name="Timer" type="Timer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="." node_paths=PackedStringArray("health_component")]
offset_left = -30.0
offset_top = -95.0
offset_right = 30.0
offset_bottom = -85.0
theme_override_styles/background = SubResource("StyleBoxFlat_bnc2x")
theme_override_styles/fill = SubResource("StyleBoxFlat_oq04r")
value = 50.0
show_percentage = false
script = ExtResource("3_o5exj")
health_component = NodePath("../HealthComponent")
metadata/_edit_use_anchors_ = true

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_jk2d2")
max_health = 50.0

[node name="AttackComponent" parent="." instance=ExtResource("5_pi0v5")]
visible = false
position = Vector2(0, -30)
damage = 20.0

[node name="AttackArea" parent="AttackComponent" index="0"]
position = Vector2(23, 0)

[node name="HitboxComponent" type="Area2D" parent="."]
visible = false
position = Vector2(0, -30)
script = ExtResource("6_uy4kh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CapsuleShape2D_3wqly")

[node name="PathfindComponent" type="Node2D" parent="." node_paths=PackedStringArray("velocity_component")]
script = ExtResource("7_q1lod")
velocity_component = NodePath("../VelocityComponent")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="PathfindComponent"]

[node name="TeamComponent" type="Node" parent="."]
script = ExtResource("8_4t2y7")

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("9_3pcpn")
speed = 1500.0

[node name="VisionComponent" parent="." instance=ExtResource("10_mlheh")]
visible = false
position = Vector2(0, -30)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("11_spwk3")
initial_state = NodePath("Idle")

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("unit")]
script = ExtResource("12_8vpxg")
unit = NodePath("../..")

[node name="Death" type="Node" parent="StateMachine" node_paths=PackedStringArray("unit")]
script = ExtResource("13_vwg8b")
unit = NodePath("../..")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("unit")]
script = ExtResource("14_si0iq")
unit = NodePath("../..")

[node name="March" type="Node" parent="StateMachine" node_paths=PackedStringArray("unit")]
script = ExtResource("15_yhwyp")
unit = NodePath("../..")

[node name="Pursuit" type="Node" parent="StateMachine" node_paths=PackedStringArray("unit")]
script = ExtResource("16_vaslo")
unit = NodePath("../..")

[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/Attack" method="_on_animation_player_animation_finished"]
[connection signal="health_below_zero" from="HealthComponent" to="." method="_on_health_below_zero"]
[connection signal="health_below_zero" from="HealthComponent" to="HealthBar" method="_on_health_below_zero"]
[connection signal="health_change" from="HealthComponent" to="HealthBar" method="_on_health_change"]

[editable path="AttackComponent"]
[editable path="VisionComponent"]
